--- a/index.html
+++ b/index.html
@@ -5,109 +5,172 @@
   	<link href="bootsrap_exercise-master/dist/css/bootstrap.css"rel="stylesheet">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"> -->
 	<link href="Homepage.css" rel="stylesheet"">
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<script src="jquery-3.3.1.min.js"></script>
+  	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<title>(Un)Known</title>
 </head>
-
 <body>
-	<nav class="navbar navbar-inverse navbar fixed-top">
-	  <div class="container-fluid">
+	<nav class="navbar-inverse navbar-fixed-top">
+	  <div class="container-fluid mx-auto">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">(Un)Known</a>
-	    </div>
+	      <a class="active navbar-brand " href="#">(Un)Known</a>
+	    </div >
 	    <ul class="nav navbar-nav">
-	      <li class="icon"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
-	      <li class="icon"><a href="londoneye.html"><img src="./Images/cab.png"><br>London Eye</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="hydepark.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="canarywharf.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="soho.html"><img src="./Images/cab.png"><br>Soho</a></li>
-	      <li class="icon"><a href="rooftops.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
+<!-- 	      <li class="active"><a href="#"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
+	      <li class="icon"><a href="#"><img src=".Images/london-eye (1).png"><br>London Eye</a></li>
+	      <li class="icon"><a href="#"><img src=".Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
+	      <li class="icon"><a href="#"><img src=".Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
+	      <li class="icon"><a href="#"><img src=".Images/icons8-city-100.png"><br>Canary Wharf</a></li>
+	      <li class="icon"><a href="#"><img src=".Images/icons8-musical-notes-32.png"><br>Soho</a></li>
+	      <li class="icon"><a href="#"><img src=".Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="(Un)Known.html#Signup"><img src=".Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
-
-	<div Class='UnknownTitle'>
-		<h1>(Un)Known</h1>	
-		<p >We want you to know the London we know - awesome places right by landmarks you could easily miss.<br />
-			We’ve made a list, so you don’t have to - but sign in and share your own discoveries. </p>
-	</div>
-
-	<div Class='LondonCarousel'>
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		  <!-- Indicators -->
-		  <ol class="carousel-indicators">
-		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		    <li data-target="#myCarousel" data-slide-to="1"></li>
-		    <li data-target="#myCarousel" data-slide-to="2"></li>
-		  </ol>
-
-		  <!-- Wrapper for slides -->
-		  <div class="carousel-inner">
-		    <div class="item active">
-		      <img src="./Images/towerbridge.jpg">
-		      <div class="carousel-caption">
-		        <h3>Big Ben</h3>
-		        <p>Always so much fun!</p>
-		      </div>
-		    </div>
-
-		    <div class="item">
-		      <img src="./Images/towerbridge.jpg">
-		      <div class="carousel-caption">
-		        <h3>Sky Garden</h3>
-		        <p>So surreal!</p>
-		      </div>
-		    </div>
-
-		    <div class="item">
-		      <img src="./Images/towerbridge.jpg" alt="Piccadilly Circus">
-		      <div class="carousel-caption">
-		        <h3>Piccadilly Circus</h3>
-		        <p>The big apple of London!</p>
-		      </div>
-		    </div>
-		  </div>
-
-			 <!-- Left and right controls -->
-			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-			   <span class="glyphicon glyphicon-chevron-left"></span>
-			   <span class="sr-only">Previous</span>
-			</a>
-			<a class="right carousel-control" href="#myCarousel" data-slide="next">
-			   <span class="glyphicon glyphicon-chevron-right"></span>
-			   <span class="sr-only">Next</span>
-			</a>
+	<section id='section01' Class= 'demo'>
+		<a href="#section01"><span></span></a>
+		<div Class="UnKnownTitle">
+			<div class="new"><h1>Uncover London's...</h1></div>
+			<div class="old"><h1>(Un)Known</h1></div> 
+			<h4>We want you to know the London we know - awesome places right by landmarks you could easily miss.<br /> We’ve made a list, so you don’t have to - but sign in and share your own discoveries.</h4>
 		</div>
-
-	</div>
-
-	<div class="Signup">
-		<form action="action_page.php">
-			<div class="container">
-				<h1>Sign Up</h1>
-				<p>Fill in your details below to start exploring</p>
-					<hr>
-						<label for="email"><b>Email</b></label>
-						<input type="text" placeholder="Enter Email" name="email" required>
-
-						<label for="psw"><b>Password</b></label>
-						<input type="password" placeholder="Enter Password" name="psw" required>
-					<hr>
-				<button type="submit" class="registerbtn">Register</button>
+	</section>
+	<section id='section02' Class= 'demo'>
+		<div Class='LondonCarousel'>
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			  <!-- Indicators -->
+			  <ol class="carousel-indicators">
+			    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			    <li data-target="#myCarousel" data-slide-to="1"></li>
+			    <li data-target="#myCarousel" data-slide-to="2"></li>
+			  </ol>
+			  <!-- Wrapper for slides -->
+			  <div class="carousel-inner">
+			    <div class="item active">
+			      <img src=".Images/aerial-view-ancient-architecture-672532.jpg" alt="Big Ben">
+			      <div class="carousel-caption">
+			        <h3>Big Ben</h3>
+			        <p>Always so much fun!</p>
+			      </div>
+			    </div>
+			    <div class="item">
+			      <img src=".Images/adults-airport-architectural-design-301930.jpg" alt="Sky Garden">
+			      <div class="carousel-caption">
+			        <h3>Sky Garden</h3>
+			        <p>So surreal!</p>
+			      </div>
+			    </div>
+			    <div class="item">
+			      <img src=".Images/advertisements-building-cars-34639.jpg" alt="Piccadilly Circus">
+			      <div class="carousel-caption">
+			        <h3>Piccadilly Circus</h3>
+			        <p>The big apple of London!</p>
+			      </div>
+			    </div>
+			  </div>
+				 <!-- Left and right controls -->
+				<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+				   <span class="glyphicon glyphicon-chevron-left"></span>
+				   <span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#myCarousel" data-slide="next">
+				   <span class="glyphicon glyphicon-chevron-right"></span>
+				   <span class="sr-only">Next</span>
+				</a>
 			</div>
-
-			<div class="container signin">
-			  	<p>Already have an account? <a href="#">Sign in</a>.</p>
-			</div>
-		</form>
-	</div>	
+		</div>
+	</section>
+	<section id='section03' Class= 'demo'>
+<div class="container">
+   <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="panel panel-login">
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-lg-12">
+              <form id="login-form" action="#" method="post" role="form" style="display: block;">
+                <h2>LOGIN</h2>
+                  <div class="form-group">
+                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                  </div>
+                  <div class="col-xs-6 form-group pull-left checkbox">
+                    <input id="checkbox1" type="checkbox" name="remember">
+                    <label for="checkbox1">Remember Me</label>   
+                  </div>
+                  <div class="col-xs-6 form-group pull-right">     
+                        <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
+                  </div>
+              </form>
+              <form id="register-form" action="#" method="post" role="form" style="display: none;">
+                <h2>SIGN UP</h2>
+                  <div class="form-group">
+                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+                  </div>
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col-sm-6 col-sm-offset-3">
+                        <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                      </div>
+                    </div>
+                  </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-6 tabs">
+              <a href="#" class="active" id="login-form-link"><div class="login">LOGIN</div></a>
+            </div>
+            <div class="col-xs-6 tabs">
+              <a href="#" id="register-form-link"><div class="register">SIGN UP</div></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+<script type="text/javascript">
+$(function() {
+    $('#login-form-link').click(function(e) {
+        $("#login-form").delay(100).fadeIn(100);
+        $("#register-form").fadeOut(100);
+        $('#register-form-link').removeClass('active');
+        $(this).addClass('active');
+        e.preventDefault();
+    });
+    $('#register-form-link').click(function(e) {
+        $("#register-form").delay(100).fadeIn(100);
+        $("#login-form").fadeOut(100);
+        $('#login-form-link').removeClass('active');
+        $(this).addClass('active');
+        e.preventDefault();
+    });
+});
+</script>
 </body>
-
 </html>
-
