--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    <div id="bootstrap-overrides" class="navbar-header">
 	      <a class="active navbar-brand " href="#">(Un)Known</a>
 	    </div >
-	    <ul class="nav navbar-nav">
+	    <ul id="bootstrap-overrides" class="nav navbar-nav">
 <!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
