--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
 	<nav class="navbar-inverse navbar-fixed-top">
 	  <div class="nav-info mx-auto">
-	    <div id="bootstrap-overrides" class="navbar-header">
+	    <div class="navbar-header">
 	      <a class="active navbar-brand " href="#">(Un)Known</a>
 	    </div >
-	    <ul id="bootstrap-overrides" class="nav navbar-nav">
+	    <ul class="nav navbar-nav">
 <!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
