--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<nav class="navbar-inverse navbar-fixed-top">
-	  <div class="nav-info mx-auto">
+	  <div class="container-fluid mx-auto">
 	    <div class="navbar-header">
 	      <a class="active navbar-brand " href="#">(Un)Known</a>
 	    </div >
