--- a/index.html
+++ b/index.html
@@ -5,38 +5,37 @@
   	<link href="bootsrap_exercise-master/dist/css/bootstrap.css"rel="stylesheet">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"> -->
+
 	<link href="Homepage.css" rel="stylesheet"">
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  	<script src="jquery-3.3.1.min.js"></script>
-  	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  	
+  
   	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<!-- <link rel="stylesheet" type="text/css" href="./location.css"> -->
+
 	<title>(Un)Known</title>
 </head>
 <body>
 	<nav class="navbar-inverse navbar-fixed-top">
-	  <div class="container-fluid mx-auto">
-	    <div class="navbar-header">
-	      <a class="active navbar-brand " href="#">(Un)Known</a>
-	    </div >
-	    <ul class="nav navbar-nav">
-<!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
-	    </ul>
-	  </div>
-	</nav>
+    <div class="container-fluid mx-auto">
+      <div class="navbar-header">
+        <a class="active navbar-brand " href="#">(Un)Known</a>
+      </div >
+      <ul class="nav navbar-nav">
+<!--        <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+        <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+      </ul>
+    </div>
+  </nav>
 	<section id='section01' Class= 'demo'>
 		<a href="#section01"><span></span></a>
 		<div Class="UnKnownTitle">
@@ -57,21 +56,21 @@
 			  <!-- Wrapper for slides -->
 			  <div class="carousel-inner">
 			    <div class="item active">
-			      <img src="./Images/aerial-view-ancient-architecture-672532.jpg" alt="Big Ben">
+			      <img src=".Images/aerial-view-ancient-architecture-672532.jpg" alt="Big Ben">
 			      <div class="carousel-caption">
 			        <h3>Big Ben</h3>
 			        <p>Always so much fun!</p>
 			      </div>
 			    </div>
 			    <div class="item">
-			      <img src="./Images/adults-airport-architectural-design-301930.jpg" alt="Sky Garden">
+			      <img src=".Images/adults-airport-architectural-design-301930.jpg" alt="Sky Garden">
 			      <div class="carousel-caption">
 			        <h3>Sky Garden</h3>
 			        <p>So surreal!</p>
 			      </div>
 			    </div>
 			    <div class="item">
-			      <img src="./Images/advertisements-building-cars-34639.jpg" alt="Piccadilly Circus">
+			      <img src=".Images/advertisements-building-cars-34639.jpg" alt="Piccadilly Circus">
 			      <div class="carousel-caption">
 			        <h3>Piccadilly Circus</h3>
 			        <p>The big apple of London!</p>
