--- a/towerbridge.html
+++ b/towerbridge.html
@@ -29,8 +29,8 @@
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
 	      <li class="icon"><a href="hydepark.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
 	      <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
+	      <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
 	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
