--- a/towerbridge.html
+++ b/towerbridge.html
@@ -57,12 +57,11 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
 	</div>
-	<p>- Open air shopping and cafes</p>
-	<p>- Old fashioned atmospheric market stalls everything from London souvenirs to with good quality jewellery and leather goods</p>
-	<p>- Fountain in the centre - 60-foot sculpture by artist David Kemp was installed in 1987</p>
-	<p>- View of the Thames, sky garden, and other skyscrapers including the Gherkin</p>
-	<p>- Access to the riverbank of the Thames</p>
-	</ul>
+	&bull;Open air shopping and cafes<br/>
+        &bull;Old fashioned atmospheric market stalls everything from London souvenirs to with good quality jewellery and leather goods<br/>
+	&bull;Fountain in the centre - 60-foot sculpture by artist David Kemp was installed in 1987<br/>
+	&bull;View of the Thames, sky garden, and other skyscrapers including the Gherkin<br/>
+	&bull;Access to the riverbank of the Thames<br/>
       </div>
     </div>
   </div>
