--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-	<link href="signup.css" rel="stylesheet"">
+	<link href="../static/signup.css" rel="stylesheet"">
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -14,6 +14,8 @@
   	
   
   	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+<!-- <link rel="stylesheet" type="text/css" href="./location.css"> -->
+
 	<title>(Un)Known - SignUp</title>
 </head>
 <body>
@@ -24,13 +26,13 @@
       </div >
       <ul class="nav navbar-nav">
 <!--        <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-        <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
-        <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
-        <li class="icon"><a href="hydepark.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
-        <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-        <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
-        <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-        <li class="icon"><a href="signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+        <li class="icon"><a href="londoneye.html"><img src="../static/Images/london-eye (1).png"><br>South Bank</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="../static/Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
+        <li class="icon"><a href="hydepark.html"><img src="../static/Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
+        <li class="icon"><a href="canarywharf.html"><img src="../static/Images/icons8-city-100.png"><br>Canary Wharf</a></li>
+        <li class="icon"><a href="soho.html"><img src="../static/Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
+        <li class="icon"><a href="rooftops.html"><img src="../static/Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+        <li class="icon"><a href="signup.html"><img src="../static/Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
       </ul>
     </div>
   </nav>
