--- a/loginhomepage.html
+++ b/loginhomepage.html
@@ -33,7 +33,7 @@
         <li class="icon"><a href="canarywharf.html"><img src="../static/Images/icons8-city-100.png"><br>Canary Wharf</a></li>
         <li class="icon"><a href="soho.html"><img src="../static/Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
         <li class="icon"><a href="rooftops.html"><img src="../static/Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-        <li class="icon"><a href="signup.html"><img src="../static/Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+        <li class="icon"><a href="/signup"><img src="../static/Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
         <li class="icon"><a href="index.html"><img src="../static/Images/exitdoor.png"><br>Log Out</a></li>
       </ul>
     </div>
